# smw

./: README.md  pyproject.toml
example/: collection_script.py  extraction_script.py
slides/: slides.ipynb  slides.slides.html  smw_talk.html  smw_talk.ipynb
