[tool.poetry]
name = "metadata workshop"
version = "0.1.0"
description = ""
authors = ["bubblbu <asura.enkhbayar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
click = "^8.1.3"
habanero = "^1.2.3"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
